# tofino-spin-bit-tracker

./: LICENSE  README.md
p4src/: spintracker.p4
p4src/flow_identification/: flow_id_static.p4
p4src/observer_logic/: Spin_bit.p4
p4src/p4_core/: headers.p4  parser.p4
run_pd_rpc/: setup_mirror_sessions.py
switch_control/: CMakeLists.txt  main.cpp  run_switch_control.sh  switchd.cpp  switchd.hpp  tofino_register.cpp  tofino_register.hpp  tofino_switch_control.cpp  tofino_switch_control.hpp  tofino_tables.cpp  tofino_tables.hpp
